--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                       <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                           <li class="nav-item active">
-                            <a class="nav-link" href="#">Books <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#books">Books <span class="sr-only">(current)</span></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Course</a>
+                            <a class="nav-link" href="#courses">Courses</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link " href="#">Others</a>
+                            <a class="nav-link " href="#others">Others</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link " href="#">Blogs</a>
@@ -60,7 +60,7 @@
     </section>
 
 
-    <section class="categories">
+    <section class="books" id="books">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 ">
@@ -102,7 +102,7 @@
         </div>
     </section>
 
-    <section class = "online courses">
+    <section class = "online courses" id='courses'>
         <div class="container"> 
             <div class = "section-name">
                 <h2>Online courses</h2>
@@ -160,7 +160,7 @@
         </div>
     </section>
 
-    <section class="testimonial">
+    <section class="testimonial" id="others">
         <div class="section-name">
             <h2>Testimonial</h2>
         </div>
@@ -178,27 +178,40 @@
         </div>
     </section>
 
+    
     <Footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-6 ">
-                   <p> Millions of people of all ages and from around the world are improving their lives with us</p>
+                   <p class = "text"> Millions of people of all ages and from around the world are improving their lives with us</p>
                 </div>
                 <div class="col-md-2">
                     <h5>Course</h5>
-                    <ul>
-                        <li>Graphics Design</li>
-                        <li>Web Desin</li>
-                        <li><Buisness/li>
-                        <li>Marketing</li>
-                        <li>Engineering</li>
-                    </ol>
-                    
+                    <p>Graphic Design
+                        <br> Web Design
+                        <br> Business
+                        <br> Marketing
+                        <br> Engineering</p>
                 </div>
-                <div class="col-md-2"></div>
-                <div class="col-md-2"></div>
+                <div class="col-md-2">
+                    <h5>Terms</h5>
+                    <p>Graphic Design
+                        <br> Web Design
+                        <br> Business
+                        <br> Marketing
+                        <br> Engineering</p>
+                </div>
+                <div class="col-md-2">
+                    <h5>Useful Link</h5>
+                    <p>Graphic Design
+                    <br> Web Design
+                    <br>Business
+                    <br>Marketing
+                    <br>Engineering</p>
+                </div>
             </div>
         </div>
+        <p style="text-align: center;">Copyright © 2020 All right reserve Emdadul Tareque</p>
     </Footer>
    
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
